--- a/chat-bot/chat-front/index.html
+++ b/chat-bot/chat-front/index.html
@@ -64,8 +64,8 @@
             </div>
             <br>
             <div id="button-group">
-                <button id="button1" class="tipoChat selected btn btn-secondary" onclick="alteraTipoDoChat(this)" value="ChatBotHotelPets">ChatBot hotel para pets</button>
-                <!-- <button id="button2" class="tipoChat btn btn-secondary" onclick="alteraTipoDoChat(this)" value="ChatBotFarmacia">ChatBot de farmácia</button> -->
+                <!-- <button id="button1" class="tipoChat selected btn btn-secondary" onclick="alteraTipoDoChat(this)" value="ChatBotHotelPets">ChatBot hotel para pets</button> -->
+                <button id="button2" class="tipoChat selected btn btn-secondary" onclick="alteraTipoDoChat(this)" value="ChatBotFarmacia">ChatBot de farmácia</button>
                 <button id="button3" class="tipoChat btn btn-secondary" onclick="alteraTipoDoChat(this)" value="ChatBotPizzaria">ChatBot Pizzaria</button>
             </div>
         </div>
